# lv_binding_rust

./: .gitignore
examples/: animation.rs  app.rs  arc.rs  bar.rs  button_click.rs  demo.rs  meter.rs  rust_timer.rs  sdl.rs
lvgl/: Cargo.toml  build.rs
lvgl-codegen/: Cargo.toml
lvgl-codegen/src/: analysis.rs  lib.rs
lvgl-sys/: Cargo.toml  build.rs
lvgl-sys/src/: lib.rs  string_impl.rs
lvgl/src/: allocator.rs  display.rs  functions.rs  lib.rs  mem.rs  point.rs  support.rs  timer.rs
lvgl/src/drivers/: lv_drv_display.rs  lv_drv_input.rs
lvgl/src/font/: builtin.rs  generic.rs
lvgl/src/input_device/: encoder.rs  generic.rs  mod.rs  pointer.rs
lvgl/src/lv_core/: group.rs  obj.rs  screen.rs  style.rs
lvgl/src/misc/: anim.rs  area.rs
lvgl/src/widgets/: arc.rs  bar.rs  keyboard.rs  label.rs  meter.rs  mod.rs  slider.rs  table.rs
