[package]
name = "lvgl-codegen"
version = "0.6.2"
description = "Code generation based on LVGL source code"
authors = ["Rafael Caricio <crates.lvgl@caric.io>", "Nia Espera <a5b6@riseup.net>"]
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/rafaelcaricio/lvgl-rs"

[dependencies]
regex = "1.11.2"
quote = "1.0.40"
lazy_static = "1.5.0"
proc-macro2 = "1.0.101"
Inflector = "0.11.4"
syn = { version = "2.0.106", features = ["full"]}
